[package]
name = "rusty-tokens"
version = "0.2.1"
authors = ["Jannic Hartwecker <jannic.hartwecker@zalando.de>", "Christian Douven <christian.douven@zalando.de>"]
license = "MIT"
description = "An authentication and authorization library for Rust in the Zalando landscape."
keywords = ["OAUTH2", "JWT", "PlanB"]

[dependencies]
log = "0.3"
rustc-serialize = { version = "*" }
chrono = "0.2"
url= "1.2.0"

hyper = { version = "0.9", optional = true }
iron = { version = "0.4", optional = true }

[dependencies.http-error-object]
git = "https://github.com/zalando-incubator/http-error-object-rs.git"
tag = "v0.1.5"

[dev-dependencies]
env_logger = "0.3"
